--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-native-svg": "14.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.20.0",
+    "@babel/core": "^7.20.0",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/metro-config": "0.73.2",
     "react-native-asset": "^1.1.4",
@@ -31,8 +31,8 @@
     "typescript": "5.0.4"
   },
   "overrides": {
-    "@babel/traverse": "7.20.0",
-    "@babel/core": "7.20.0"
+    "@babel/traverse": "^7.20.0",
+    "@babel/core": "^7.20.0"
   },
   "engines": {
     "node": ">=18"
