--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
     "start": "react-native start"
   },
   "dependencies": {
@@ -15,7 +14,6 @@
     "react": "18.2.0",
     "react-native": "0.73.0",
     "react-native-gesture-handler": "2.14.1",
-    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "3.6.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "3.29.0",
@@ -24,17 +22,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/metro-config": "0.73.2",
-    "react-native-asset": "^1.1.4",
+    "@react-native/babel-preset": "^0.73.21",
+    "@react-native/metro-config": "^0.73.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
-  },
-  "overrides": {
-    "@babel/traverse": "^7.20.0",
-    "@babel/core": "^7.20.0"
-  },
-  "engines": {
-    "node": ">=18"
   }
 }
