--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "react-native-svg": "14.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.20.0",
+    "@babel/core": "^7.20.0",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/metro-config": "0.73.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "overrides": {
-    "@babel/parser": "7.20.0",
-    "@babel/traverse": "7.20.0",
-    "@babel/core": "7.20.0"
+    "@babel/parser": "^7.20.0",
+    "@babel/traverse": "^7.20.0",
+    "@babel/core": "^7.20.0"
   }
 }
