--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,44 +1,21 @@
 workflows:
   android-workflow:
     name: Android Build
-    max_build_duration: 60
-    instance_type: mac_mini_m1
     environment:
       node: 20
     scripts:
       - name: Install dependencies
+        script: npm install --legacy-peer-deps
+      - name: Force Build APK
         script: |
-          npm install --legacy-peer-deps
-      - name: Build Android APK
-        script: |
-          # 1. Setup environnement
-          NODE_DIR=$(dirname $(which node))
-          export PATH="$NODE_DIR:$PATH"
-          
-          # 2. Création des dossiers cibles
+          # 1. Créer le dossier pour le code
           mkdir -p android/app/src/main/assets
           
-          # 3. GÉNÉRATION MANUELLE DU BUNDLE
-          # On le fait ici car npx utilise le contexte direct du projet, pas celui de Gradle
-          npx react-native bundle \
-            --platform android \
-            --dev false \
-            --entry-file index.js \
-            --bundle-output android/app/src/main/assets/index.android.bundle \
-            --assets-dest android/app/src/main/res \
-            --reset-cache
-
-          # 4. COMPILATION APK (Le "Trick")
+          # 2. Générer le code manuellement (Bypass Babel/Gradle conflict)
+          npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
+          
+          # 3. Compiler l'APK en disant à Gradle d'ignorer le JS
           cd android
-          chmod +x gradlew
-          # -PreactNativeBundleCommand="echo" remplace la commande Node qui crash par un simple message
-          ./gradlew assembleRelease \
-            -PreactNativeBundleCommand="echo skipping-internal-bundle" \
-            -PreactNativeNodeExecutableAndArgs="$NODE_DIR/node" \
-            --no-daemon
+          ./gradlew assembleRelease -PbundleInRelease=false --no-daemon
     artifacts:
       - android/app/build/outputs/apk/release/*.apk
-    publishing:
-      email:
-        recipients:
-          - ton-email@exemple.com
